# ACG-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  WaveEffect.md  vcpkg.json
assets/mesh/living/: LMspirit.mtl  bigstereo.mtl  bottompillar.mtl  boxbutton.mtl  ceiling.mtl  ceilinglight.mtl  cups.mtl  curtain.mtl  floor.mtl  fourchairs.mtl  innersculpture.mtl  lamp.mtl  leftglass.mtl  leftlowerbox.mtl  leftmiddlebox.mtl  leftupperbox.mtl  leftwall.mtl  longcupboard.mtl  picture.mtl  plate.mtl  rightbox.mtl  rightglass.mtl  rightlights.mtl  sculpturebase.mtl  smallstereofoot.mtl  smallstereohead.mtl  sofamiddlepillow.mtl  sofarightback.mtl  tablefeet.mtl  television.mtl  threelight.mtl
code/: CMakeLists.txt
code/sparkium/: CMakeLists.txt  sparkium.cpp
code/sparkium/app/: CMakeLists.txt  app.cpp  app.h  app_gui_renderer.cpp  app_gui_renderer.h  app_settings.cpp  app_settings.h  app_utils.cpp  app_utils.h  built_in_scene.h  built_in_scenes.cpp  built_in_scenes.h  camera_controller.cpp  camera_controller.h
code/sparkium/app/shaders/: app_gui.frag  app_gui.vert
code/sparkium/asset_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  asset_manager_utils.cpp  asset_manager_utils.h  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
code/sparkium/assets/: CMakeLists.txt  assets.cpp  assets.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertex.cpp  vertex.h
code/sparkium/main/: CMakeLists.txt  main.cpp
code/sparkium/renderer/: CMakeLists.txt  film.cpp  film.h  raytracing_film.cpp  raytracing_film.h  renderer.cpp  renderer.h  renderer_utils.cpp  renderer_utils.h
code/sparkium/renderer/shaders/: constants.glsl  entity_metadata.glsl  entity_pass.frag  entity_pass.vert  envmap.glsl  envmap_pass.frag  envmap_pass.vert  hit_record.glsl  material.glsl  mesh_metadata.glsl  post_process.frag  post_process.vert  random.glsl  ray_payload.glsl  raytracing.rchit  raytracing.rgen  raytracing.rmiss  scene_settings.glsl  shadow_ray.glsl  trace_ray.glsl  vertex.glsl
code/sparkium/scene/: CMakeLists.txt  camera.cpp  camera.h  entity.cpp  entity.h  envmap.cpp  envmap.h  material.cpp  material.h  scene.cpp  scene.h  scene_settings.h  scene_utils.cpp  scene_utils.h
code/sparkium/utils/: CMakeLists.txt  common.cpp  common.h  file_probe.cpp  file_probe.h  hyper_params.h  utils.h
docs/: definition.md  framework.md  getting_started.md
